# ExploreSCIS-2021

./: README.md  main.py  pyproject.toml
templates/: index.html  login.html  signup.html
